--- a/web/index.html
+++ b/web/index.html
@@ -16,45 +16,80 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      overflow: hidden;
+      color: white;
+    }
+
+    /* 🔥 Background image fade animation */
+    body {
       background: url('presko.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: white;
+      animation: fadeBg 10s ease-in-out infinite alternate;
+    }
+
+    @keyframes fadeBg {
+      from { filter: brightness(0.7) saturate(0.9); }
+      to { filter: brightness(1.2) saturate(1.4); }
     }
 
     .overlay {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 40px;
+      background: rgba(0, 0, 0, 0.65);
+      padding: 50px;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(255, 0, 0, 0.7);
+      box-shadow: 0 0 30px rgba(255, 0, 0, 0.6);
       width: 80%;
-      max-width: 500px;
+      max-width: 550px;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    /* Glowing animated title text */
     h1 {
-      font-size: 2em;
+      font-size: 2.3em;
       margin-bottom: 1.5rem;
-      text-shadow: 0 0 15px red;
+      color: #fff;
+      text-shadow: 0 0 20px #ff0000, 0 0 40px #ff4444, 0 0 80px #ff0000;
+      animation: glowPulse 2.5s infinite alternate;
     }
 
+    @keyframes glowPulse {
+      from { text-shadow: 0 0 10px #ff0000, 0 0 20px #ff4444, 0 0 40px #ff0000; }
+      to { text-shadow: 0 0 25px #ff4444, 0 0 50px #ff0000, 0 0 100px #ff2222; }
+    }
+
+    /* Pulsing button */
     button {
-      padding: 12px 24px;
-      font-size: 1.2em;
+      padding: 14px 30px;
+      font-size: 1.3em;
       cursor: pointer;
       border: none;
-      border-radius: 10px;
+      border-radius: 12px;
       background-color: #e11;
       color: white;
-      transition: background 0.3s;
+      box-shadow: 0 0 15px #ff0000;
+      transition: all 0.3s ease-in-out;
+      animation: buttonPulse 1.8s infinite alternate;
+    }
+
+    @keyframes buttonPulse {
+      from { transform: scale(1); box-shadow: 0 0 15px #ff0000; }
+      to { transform: scale(1.05); box-shadow: 0 0 25px #ff4444; }
     }
 
     button:hover {
       background-color: #b00;
+      transform: scale(1.1);
     }
 
     #status {
       margin-top: 20px;
       font-size: 1.1em;
-      color: #ff8080;
+      color: #ffb3b3;
+      text-shadow: 0 0 5px #ff0000;
     }
   </style>
 </head>
