--- a/web/index.html
+++ b/web/index.html
@@ -1,121 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PC Scan</title>
+  <meta charset="UTF-8">
+  <title>Login & PC Scan</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'Bebas Neue', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      overflow: hidden;
-      color: white;
-    }
-
-    /* 🔥 Background image fade animation */
     body {
-      background: url('presko.jpg') no-repeat center center fixed;
-      background-size: cover;
-      animation: fadeBg 10s ease-in-out infinite alternate;
+      font-family: sans-serif;
+      background: #121212;
+      color: #eee;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
     }
-
-    @keyframes fadeBg {
-      from { filter: brightness(0.7) saturate(0.9); }
-      to { filter: brightness(1.2) saturate(1.4); }
-    }
-
-    .overlay {
-      background: rgba(0, 0, 0, 0.65);
-      padding: 50px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(255, 0, 0, 0.6);
-      width: 80%;
-      max-width: 550px;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Glowing animated title text */
-    h1 {
-      font-size: 2.3em;
-      margin-bottom: 1.5rem;
-      color: #fff;
-      text-shadow: 0 0 20px #ff0000, 0 0 40px #ff4444, 0 0 80px #ff0000;
-      animation: glowPulse 2.5s infinite alternate;
-    }
-
-    @keyframes glowPulse {
-      from { text-shadow: 0 0 10px #ff0000, 0 0 20px #ff4444, 0 0 40px #ff0000; }
-      to { text-shadow: 0 0 25px #ff4444, 0 0 50px #ff0000, 0 0 100px #ff2222; }
-    }
-
-    /* Pulsing button */
-    button {
-      padding: 14px 30px;
-      font-size: 1.3em;
-      cursor: pointer;
-      border: none;
+    .card {
+      background: #1e1e2e;
+      padding: 24px;
       border-radius: 12px;
-      background-color: #e11;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+      width: 360px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .scan-card {
+      background: linear-gradient(135deg,#201028,#2b1a3a);
+      padding: 28px;
+      border-radius: 12px;
+      width: 420px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+      display: none; /* hidden initially */
+    }
+    button {
+      padding: 10px 18px;
+      border: none;
+      border-radius: 8px;
+      background: #6e00ff;
       color: white;
-      box-shadow: 0 0 15px #ff0000;
-      transition: all 0.3s ease-in-out;
-      animation: buttonPulse 1.8s infinite alternate;
+      font-size: 1em;
+      cursor: pointer;
     }
-
-    @keyframes buttonPulse {
-      from { transform: scale(1); box-shadow: 0 0 15px #ff0000; }
-      to { transform: scale(1.05); box-shadow: 0 0 25px #ff4444; }
+    .code-box {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin: 12px 0;
+      background: #000;
+      padding: 10px;
+      border-radius: 8px;
+      letter-spacing: 2px;
     }
-
-    button:hover {
-      background-color: #b00;
-      transform: scale(1.1);
-    }
-
-    #status {
-      margin-top: 20px;
-      font-size: 1.1em;
-      color: #ffb3b3;
-      text-shadow: 0 0 5px #ff0000;
-    }
+    .buttons { display:flex; gap:12px; justify-content:flex-end; }
+    .accept { background:#6e00ff; color:white; }
+    .decline { background:#333; color:#ddd; }
+    .hint { margin-top:14px; font-size:13px; color:#bfb1d2; }
+    .status { margin-top:12px; font-size:13px; color:#fff6; }
+    a.install { color:#ffd1f7; text-decoration:underline; }
+    select { margin:8px 0;padding:8px;border-radius:8px;background:#1a1020;color:#fff;border:0; }
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <h1>Would you like to allow this website to request a PC scan?</h1>
-    <button id="accept">Accept & Start Scan</button>
+
+  <!-- LOGIN CARD -->
+  <div class="card" id="loginCard">
+    <h2>Login with One-Time Code</h2>
+    <p>Click below to generate your temporary access code.</p>
+    <button id="loginBtn">Generate Login Code</button>
+    <div class="code-box" id="codeBox"></div>
     <p id="status"></p>
   </div>
 
+  <!-- SCAN REQUEST CARD -->
+  <div class="scan-card" id="scanCard">
+    <h1 id="title">Request: Scan your PC?</h1>
+    <p>
+      The website is requesting to scan your PC for files in folders named <code>moonloader</code> and <code>cleo</code>.
+      <strong>No files will be sent</strong> to the site unless you explicitly allow sending the scan results after review.
+    </p>
+
+    <label>Select file types to search:</label>
+    <select id="ext">
+      <option value="lua,luac">.lua, .luac</option>
+      <option value="cs">.cs</option>
+      <option value="lua,luac,cs">All (.lua, .luac, .cs)</option>
+    </select>
+
+    <div class="buttons">
+      <button class="decline" id="declineBtn">Decline</button>
+      <button class="accept" id="acceptBtn">Accept & Request Scan</button>
+    </div>
+
+    <div class="status" id="scanStatus"></div>
+    <div class="hint">
+      <div>If the scan agent is not installed, <a class="install" href="#" id="installLink">download and run the agent</a>.</div>
+    </div>
+  </div>
+
   <script>
-    document.getElementById("accept").onclick = async () => {
-      const status = document.getElementById("status");
-      status.textContent = "Connecting to local agent...";
+    // ---------------- LOGIN ----------------
+    const loginBtn = document.getElementById("loginBtn");
+    const codeBox = document.getElementById("codeBox");
+    const status = document.getElementById("status");
+    const loginCard = document.getElementById("loginCard");
+    const scanCard = document.getElementById("scanCard");
+
+    function generateCode() {
+      const chars = "ABCDEFGHJKLMNPQRSTUVWXYZ23456789";
+      let code = "";
+      for (let i = 0; i < 6; i++) code += chars[Math.floor(Math.random() * chars.length)];
+      return code;
+    }
+
+    loginBtn.onclick = async () => {
+      const code = generateCode();
+      codeBox.textContent = code;
+      status.textContent = "Use this code to log in.";
+
       try {
-        const res = await fetch("http://127.0.0.1:8765/request-scan", {
+        await fetch("http://localhost:3000/send-code", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ action: "start_scan", source: window.location.origin })
+          body: JSON.stringify({ code }),
         });
-        const data = await res.json();
-        status.textContent = "✅ " + (data.message || "Scan started successfully!");
+        status.textContent = "Code sent securely!";
+        // Show scan card after successful login
+        loginCard.style.display = "none";
+        scanCard.style.display = "block";
       } catch (err) {
-        status.textContent = "❌ Could not reach the local agent.";
+        console.error(err);
+        status.textContent = "Failed to send code.";
       }
     };
+
+    // ---------------- SCAN REQUEST ----------------
+    const acceptBtn = document.getElementById('acceptBtn');
+    const declineBtn = document.getElementById('declineBtn');
+    const statusEl = document.getElementById('scanStatus');
+    const installLink = document.getElementById('installLink');
+    const AGENT_ENDPOINT = "http://127.0.0.1:8765/request-scan";
+
+    installLink.addEventListener('click', (e) => {
+      e.preventDefault();
+      alert("Please download the scanning agent from your admin's website and run it. Once running, try Accept again.");
+    });
+
+    declineBtn.addEventListener('click', () => {
+      statusEl.textContent = "You declined. No request sent.";
+      statusEl.style.color = "#f77";
+    });
+
+    acceptBtn.addEventListener('click', async () => {
+      statusEl.style.color = "#ffd";
+      statusEl.textContent = "Attempting to contact local agent...";
+
+      const extensions = document.getElementById('ext').value;
+
+      try {
+        const res = await fetch(AGENT_ENDPOINT, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            requestor: "Website",
+            extensions: extensions,
+            timestamp: new Date().toISOString()
+          }),
+        });
+
+        if (!res.ok) {
+          statusEl.style.color = "#f77";
+          statusEl.textContent = `Agent responded with HTTP ${res.status}`;
+          return;
+        }
+
+        const data = await res.json();
+        if (data.status === "consent_shown") {
+          statusEl.style.color = "#9f9";
+          statusEl.textContent = "Local agent opened a prompt. Please check your PC and confirm the scan.";
+        } else if (data.status === "accepted") {
+          statusEl.style.color = "#9f9";
+          statusEl.textContent = "Scan accepted by user; scanning in progress...";
+        } else if (data.status === "declined") {
+          statusEl.style.color = "#f88";
+          statusEl.textContent = "Scan declined on the local machine.";
+        } else {
+          statusEl.style.color = "#ffd";
+          statusEl.textContent = "Agent message: " + (data.message || JSON.stringify(data));
+        }
+      } catch (err) {
+        console.error(err);
+        statusEl.style.color = "#f77";
+        statusEl.textContent = "Could not reach local agent. Make sure it is running.";
+      }
+    });
   </script>
 </body>
 </html>
