--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,6 @@
   <title>Login & PC Scan</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <style>
-    /* --- BODY & BACKGROUND --- */
     body {
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(135deg, #1a1a2e, #0f3460);
@@ -17,8 +16,6 @@
       min-height: 100vh;
       margin: 0;
     }
-
-    /* --- CARD BASE --- */
     .card, .scan-card {
       background: rgba(30, 30, 50, 0.95);
       padding: 28px 24px;
@@ -29,79 +26,30 @@
       text-align: center;
       transition: all 0.3s ease;
     }
-
     .scan-card {
       display: none;
       background: linear-gradient(135deg, #2c003e, #4b0082);
     }
-
     h2, h1 {
       margin: 0 0 16px 0;
       color: #ffd1f7;
     }
-
-    p {
-      font-size: 14px;
-      color: #ddd;
-      line-height: 1.5;
-    }
-
+    p { font-size: 14px; color: #ddd; line-height: 1.5; }
     input[type="text"] {
-      padding: 10px;
-      width: 80%;
-      border-radius: 10px;
-      border: none;
-      margin-top: 12px;
-      background: #1e1e3c;
-      color: #fff;
-      font-size: 14px;
-      outline: none;
+      padding: 10px; width: 80%; border-radius: 10px; border: none;
+      margin-top: 12px; background: #1e1e3c; color: #fff; font-size: 14px; outline: none;
     }
-
     button {
-      padding: 10px 20px;
-      margin-top: 12px;
-      border: none;
-      border-radius: 12px;
-      background: #6e00ff;
-      color: white;
-      font-size: 14px;
-      font-weight: bold;
-      cursor: pointer;
+      padding: 10px 20px; margin-top: 12px; border: none; border-radius: 12px;
+      background: #6e00ff; color: white; font-size: 14px; font-weight: bold; cursor: pointer;
       transition: 0.2s;
     }
-
-    button:hover {
-      background: #8a2fff;
-    }
-
-    #status {
-      margin-top: 16px;
-      font-size: 13px;
-      color: #ffd1f7;
-      min-height: 20px;
-    }
-
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 16px;
-    }
-
-    .accept {
-      background: #6e00ff;
-    }
-
-    .decline {
-      background: #333;
-      color: #ddd;
-    }
-
-    a.install {
-      color: #ffd1f7;
-      text-decoration: underline;
-      font-size: 13px;
-    }
+    button:hover { background: #8a2fff; }
+    #status { margin-top: 16px; font-size: 13px; color: #ffd1f7; min-height: 20px; }
+    .buttons { display: flex; justify-content: space-between; margin-top: 16px; }
+    .accept { background: #6e00ff; }
+    .decline { background: #333; color: #ddd; }
+    a.install { color: #ffd1f7; text-decoration: underline; font-size: 13px; }
   </style>
 </head>
 <body>
@@ -150,48 +98,82 @@
     const status = document.getElementById("status");
     const loginCard = document.getElementById("loginCard");
     const scanCard = document.getElementById("scanCard");
+    const acceptBtn = document.getElementById("acceptBtn");
+    const declineBtn = document.getElementById("declineBtn");
+    const scanStatus = document.getElementById("scanStatus");
+    const installLink = document.getElementById("installLink");
+    const extSelect = document.getElementById("ext");
 
-    // Generate code via webhook
+    // --- LOGIN FLOW ---
     loginBtn.onclick = async () => {
       try {
         const res = await fetch("http://localhost:8765/send-code", { method: "POST" });
-        if (res.ok) {
-          status.textContent = "Login code sent! Check Discord webhook and enter it below.";
-        } else {
-          status.textContent = "Failed to generate code.";
-        }
+        if (res.ok) status.textContent = "Login code sent! Check Discord webhook and enter it below.";
+        else status.textContent = "Failed to generate code.";
       } catch (err) {
         console.error(err);
         status.textContent = "Error sending code. Is the agent running?";
       }
     };
 
-    // Verify code
     verifyBtn.onclick = async () => {
-      const input = document.getElementById("inputCode").value.trim();
-      if (!input) {
-        status.textContent = "Please enter the code.";
-        return;
-      }
+      const code = document.getElementById("inputCode").value.trim();
+      if (!code) { status.textContent = "Please enter the code."; return; }
       try {
         const res = await fetch("http://localhost:8765/verify-code", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ code: input })
+          body: JSON.stringify({ code })
         });
         const data = await res.json();
         if (data.status === "ok") {
           status.textContent = "Code verified! Access granted.";
           loginCard.style.display = "none";
           scanCard.style.display = "block";
-        } else {
-          status.textContent = "Invalid code. Try again.";
-        }
+        } else status.textContent = "Invalid code. Try again.";
       } catch (err) {
         console.error(err);
         status.textContent = "Cannot verify code. Is the agent running?";
       }
     };
+
+    // --- SCAN FLOW ---
+    declineBtn.onclick = () => {
+      scanStatus.textContent = "You declined. No request sent.";
+      scanStatus.style.color = "#f77";
+    };
+
+    acceptBtn.onclick = async () => {
+      const extensions = extSelect.value;
+      scanStatus.style.color = "#ffd";
+      scanStatus.textContent = "Attempting to contact local agent...";
+
+      try {
+        const res = await fetch("http://localhost:8765/request-scan", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ extensions })
+        });
+        if (!res.ok) {
+          scanStatus.style.color = "#f77";
+          scanStatus.textContent = `Agent responded with HTTP ${res.status}`;
+          return;
+        }
+        const data = await res.json();
+        scanStatus.style.color = "#9f9";
+        scanStatus.textContent = `Scan complete. Files found: ${data.found}`;
+      } catch (err) {
+        console.error(err);
+        scanStatus.style.color = "#f77";
+        scanStatus.textContent = "Could not reach local agent. Make sure it is running.";
+      }
+    };
+
+    installLink.onclick = (e) => {
+      e.preventDefault();
+      alert("Download and run the scanning agent. Then try Accept again.");
+    };
   </script>
+
 </body>
 </html>
