--- a/web/index.html
+++ b/web/index.html
@@ -220,9 +220,10 @@ acceptBtn.onclick = async () => {
 
 installLink.onclick = (e) => {
   e.preventDefault();
-  alert("Download and run the scanning agent. Then try Accept again.");
+  alert("Download Pc-Check.exe, Dm xxx_user1 .");
 };
 </script>
 
 </body>
 </html>
+
